# iocp

./: .gitignore  CMakeLists.txt  README.en.md  README.md
.github/workflows/: ci.yml
cmake/: FindIOUring.cmake
example/: CMakeLists.txt  README.md  test.cpp  zhihu.cpp
example/echo_client/: echo_client_stackfull.cpp
example/echo_server/: echo_server.c  echo_server.cpp  echo_server_callback.cpp  echo_server_stackfull.c  echo_server_stackfull.cpp  echo_server_stackless.cpp
example/unbufcpy/: CMakeLists.txt
example/unbufcpy/unbufcp1/: unbufcp1.c
example/unbufcpy/unbufcp2/: unbufcp2.cpp
example/unbufcpy/unbufcp3/: unbufcp3.cpp
example/unbufcpy/unbufcp4/: unbufcp4.cpp
example/unbufcpy/unbufcp5/: unbufcp5.cpp
example/web_server/: server.cpp
include/: iocp.h  universal_async.hpp
iocp4linux/: CMakeLists.txt
iocp4linux/include/: iocp.h
iocp4linux/src/: internal_iocp_struct.hpp  io_uring_operation_allocator.hpp  iocp.cpp  wsa.cpp
iocp_asio/: CMakeLists.txt
iocp_asio/include/: iocp.h
iocp_asio/src/: internal_iocp_struct.hpp  iocp.cpp  operation_allocator.hpp
src/: internal_iocp_struct.hpp  io_uring_operation_allocator.hpp  iocp.cpp  wsa.cpp
test/: CMakeLists.txt  test.cpp
test/echo_server/: echo_server.cpp
test/web_server/: server.cpp
uasync/: CMakeLists.txt
uasync/asm/: CMakeLists.txt  switch_stack_x86_64.asm  zcontext_arm64.S  zcontext_x86_64.S  zcontext_x86_64.asm
uasync/fcontext_asm/: CMakeLists.txt  fcontext.hpp  jump_i386_ms_pe_masm.asm  make_x86_64_ms_pe_masm.asm  ontop_arm64_aapcs_pe_armasm.asm  ontop_i386_ms_pe_masm.asm
uasync/include/: extensable_iocp.hpp  iocp_callback.hpp  universal_async.hpp  universal_fiber.hpp  zcontext.h
uasync/zcontext_asm/: CMakeLists.txt  README.md  example.cpp  zcontext.h  zcontext_arm64.S  zcontext_x86_64.S  zcontext_x86_64.asm
µasync/: CMakeLists.txt  README.md
µasync/asm/: CMakeLists.txt  zcontext_x86_64.S
µasync/include/: awaitable.hpp  easy_iocp.hpp  universal_async.hpp  universal_fiber.h  universal_fiber.hpp  zcontext.h
