
add_executable(unbufcp1 unbufcp1/unbufcp1.c)
add_executable(unbufcp2 unbufcp2/unbufcp2.cpp)
add_executable(unbufcp3 unbufcp3/unbufcp3.cpp)
add_executable(unbufcp4 unbufcp4/unbufcp4.cpp)
set_target_properties(unbufcp1 PROPERTIES FOLDER "examples")
set_target_properties(unbufcp2 PROPERTIES FOLDER "examples")
set_target_properties(unbufcp3 PROPERTIES FOLDER "examples")
set_target_properties(unbufcp4 PROPERTIES FOLDER "examples")
